recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:2: error: not found: type int
  def square(d:int){
               ^FourSquare:3: error: not found: value x
    if (x>0 && x<90){
        ^FourSquare:3: error: not found: value x
    if (x>0 && x<90){
               ^FourSquare:8: error: not found: value rigth
  rigth(90)
  ^FourSquare:10: error: not found: value rigth
  rigth(90)
  ^FourSquare:12: error: not found: value rigth
  rigth(90)
  ^FourSquare:14: error: not found: value rigth
  rigth(90)
  ^FourSquare:17: error: not found: value square
square(0) 
^