recursion.logo.lessons.recursion.logo.square.FourSquare.scala.code
override def run() {
  def square(d:int){
    if (x>0 && x<90){
      left(90)
    } else right(90)
  }
  forward(100)
  rigth(90)
  forward(100)
  rigth(90)
  forward(100)
  rigth(90)
  forward(100)
  rigth(90)
}

square(0)